--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,18 @@
 
 h1 {
   font-weight: 500;
+  color: #F9627D;
+  text-decoration: inherit;
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+h2 {
+  font-weight: 500;
   color: #f9ada0;
   text-decoration: inherit;
+  font-size: 3.2em;
+  line-height: 1.1;
 }
 
 
@@ -30,10 +40,6 @@ body {
   display: block;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 
 button {
   border-radius: 8px;
