--- a/src/css/CalendarStyles.css
+++ b/src/css/CalendarStyles.css
@@ -1,3 +1,11 @@
+html, body {
+  overflow: hidden; /* Prevents scrolling */
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
 .calendar-container {
     background-color: #f8f9fa;
     padding: 20px;
